# mythril

./: .gitignore  Dockerfile  docker-bake.versions.json  gen_version_vars.py  pyproject.toml  requirements-dev.txt
.github/: dependabot.yml
.github/workflows/: images.yml  publish-images.yml  test-images.yml  update-versions.yml
docker/: Dockerfile  docker-bake.hcl
